src/sass/_sidebar.scss
.usngviewer-sidebar {
    width: 100%;
    a {
        text-decoration: none;
    }
}

@media (min-width: 768px) {
    .usngviewer-sidebar {
        height: 100%;
        overflow-y: scroll;
    }
}

@media (max-width: 767px) {
    .usngviewer-sidebar {
        height: auto;
        margin-top: 10px;
    }
}

table {
    color: $color2;
    tr {
        background-color: $color1;
        &:nth-child(odd) {
            background-color: rgba(190, 200, 201, 0.9);
        }
    }
    td {
        border: none !important;
    }
}

.usngviewer-table-cell-value {
    word-break: break-word;
    text-align: right;
}

.usngviewer-mapbook-title {
    font-size: 36px;
    line-height: 36px;
}

.usngviewer-mapbook-type {
    font-size: 24px;
    color: rgba(190, 200, 201, 0.7)
}

.usngviewer-mapbook-buttons {
    margin-top: 20px;
    button {
        display: block;
        width: 100%;
        text-align: left;
        font-size: 18px !important;
        margin-bottom: 10px;
        background-color: $color1 !important;
        &:hover {
            background-color: #fff !important;
        }
    }
    i {
        font-size: 18px;
        margin-right: 20px;
        color: rgba(20, 54, 66, 0.7);
    }
}

